Enum blob_status {
  pending
  ready
}

Enum media_status {
  pending
  ready
}

Table users {
  id uuid [pk]
  username citext [not null, unique]
  email citext [not null, unique]
  email_verified boolean [not null]
  password_hash varchar [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table blobs {
  id uuid [pk]
  storage_key varchar(255) [not null, unique]
  content_type varchar(255) [not null]
  content_length integer [not null]
  hash varchar(255) [not null, unique]
  hash_algorithm varchar(255) [not null]
  status blob_status [not null, default: 'pending']
  created_at timestamp [not null, default: `now()`]
}

Table media {
  id varchar(12) [pk, note: 'nanoid']
  user_id uuid [null]
  blob_id varchar [not null]
  title varchar(50) [null]
  status media_status [not null, default: 'pending']
  expires_at timestamp [null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table collections {
  id varchar(12) [pk, note: 'nanoid']
  user_id uuid [not null]
  name varchar(50) [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table collection_media {
  collection_id varchar [not null]
  media_id varchar [not null]

  indexes {
    (collection_id, media_id) [pk]
  }
}

Ref: media.user_id > users.id [delete: cascade]
Ref: media.blob_id > blobs.id [delete: cascade]

Ref: collections.user_id > users.id [delete: cascade]

Ref: collection_media.collection_id > collections.id [delete: cascade]
Ref: collection_media.media_id > media.id [delete: cascade]
